--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-cudatoolkit==10.1.243
-dgl-cuda10.1==0.6
-ignite==0.4.2
-nltk==3.4.5
-python==3.6.9
-pytorch==1.5.0
-scikit-learn==0.22
-transformers==4.1.1
+cudatoolkit~=11.3.0
+dgl -f https://data.dgl.ai/wheels/cu113/repo.html
+dglgo -f https://data.dgl.ai/wheels-test/repo.html
+pytorch-ignite
+nltk
+pytorch~=1.12.0
+scikit-learn
+transformers
